<resources>
    <string name="app_name">The Smart Parent</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="please_input_your_email">Please input your email</string>
    <string name="registered_please_login_in_here">Registered? Please Login here</string>
    <string name="register_user">Register User</string>
    <string name="please_input_your_password">Please input your password</string>
    <string name="create_an_account">Create an account</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="don_t_have_an_account_please_register_here">Don\'t have an account? Please register here</string>
    <string name="login">Login</string>
    <string name="log_into_your_account">Log into your account</string>
    <string name="submit">Submit</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="tap_on_image_to_choose_profile_picture">Tap on image to choose profile picture</string>
    <string name="todo">TODO</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="user_profile">User Profile</string>
    <string name="please_create_an_account">Please create an account</string>
    <string name="the_smart_parent">THE SMART PARENT</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_your_username">Create Your Username</string>
    <string name="please_write_your_question_here">Please write your question here…</string>
    <string name="logout">Logout</string>
    <string name="save_details">Save Details</string>
    <string name="username">username</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="reminders">Reminders</string>
    <string name="attach_an_image">Attach an image</string>
    <string name="full_name">Full Name</string>
    <string name="time">  Time</string>
    <string name="date">  Date</string>
    <string name="asked_question">Asked Question… </string>
    <string name="users_query">Users query</string>
    <string name="post_image">post image</string>
    <string name="please_select_your_date_of_birth">Please select your date of birth</string>
    <string name="at2">\@</string>
    <string name="google">GOOGLE</string>
    <string name="post_description">Post Description</string>
    <string name="delete_query">Delete Query</string>
    <string name="edit_query">Edit Query</string>
    <string name="respond">Respond</string>
    <string name="please_write_your_response_here">Please write your response here</string>
    <string name="comment_on_post">Comment on post</string>
    <string name="comment_text">comment text will display here</string>
    <string name="replied_to_your_query">Replied to your query</string>
    <string name="time_with_colon">Time:</string>
    <string name="at">at</string>
    <string name="forgot_password_please_reset_it_here">Forgot password? Please reset it here</string>
    <string name="or_login_with">Or Login With…</string>
    <string name="welcome_to_the_smart_parent">WELCOME TO THE SMART PARENT</string>
    <string name="send_email">Send Email</string>
    <string name="a_link_to_reset_your_password_will_be_sent_to_your_email">A link to reset your password will be sent to your Email.</string>
    <string name="click_on_the_link_to_reset_your_password">Click on the link to reset your Password.</string>
    <string name="_0_responses">0 Responses</string>
    <string name="add_query">Add query</string>
    <string name="hey_i_am_using_this_informative_smart_parent_app">Hey I am using this informative SMART PARENT App</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="number_of_children">Number of Children</string>
    <string name="hrs">hrs</string>
    <string name="date_with_colon">Date:</string>
    <string name="write_your_message_here">Please write your message here</string>
    <string name="send_message">Send Message</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="display_user_name">Display user name</string>
    <string name="the_smart_parent_logo">THE SMART PARENT LOGO</string>
    <string name="click_the_button_below_to_add_a_reminder">Click the button below to add a reminder.</string>
    <string name="reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="repeat">Repeat</string>
    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="repeat_off">Off</string>
    <string name="action_save_reminder">Save Reminder</string>
    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>
    <string name="editor_insert_reminder_successful">Reminder saved</string>
    <string name="editor_insert_reminder_failed">Error with saving reminder</string>
    <string name="editor_update_reminder_successful">Reminder updated</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>
    <string name="editor_update_reminder_failed">Error with updating reminder</string>
    <string name="reminder_title">AlarmReminder</string>
    <string name="active_notifications">Active Notifications</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="repeat_interval">Repeat Interval</string>
    <string name="repeat_type">Repeat Type</string>
    <string name="name_your_reminder_here">Name your reminder here</string>
    <string name="view_sent_details">View sent details</string>
    <string name="send">Send</string>
    <string name="profile_status">Profile status</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="update_account_settings">Update account settings</string>
    <string name="welcome">WELCOME</string>
    <string name="to">TO</string>
    <string name="home">Home</string>
    <string name="stories">Stories</string>
    <string name="chats">Chats</string>
    <string name="search_by_full_name">Search by parent Full name</string>
    <string name="growth_analysis">Growth Analysis</string>
    <string name="baby_products">Baby Products</string>
    <string name="feedback">Feedback</string>
    <string name="search_for_parent_by_their_full_name">Search for parent by their Full name</string>
    <string name="type_here_to_search">Type here to search</string>
    <string name="edit_your_query">Edit your query...</string>
    <string name="receivers_message">Receiver\'s message</string>
    <string name="senders_message">Sender\'s message</string>
    <string name="current_date">Current Date</string>
    <string name="age">Age</string>
    <string name="this_module_is_still_under_development">This module is still under development and testing. Suggestions highly appreciated through feedback</string>
    <string name="age2">Age :</string>
    <string name="please_select">Please select </string>
    <string name="date_of_birth_2">Date of Birth: </string>
    <string name="rate">Rate products</string>
    <string name="add_product_image">Tap image to add product</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="describe_product">Describe product</string>
    <string name="upload_product">upload product</string>
    <string name="enter_manufacturer_company_name">Enter manufacturer company name</string>
    <string name="select_category">Select Product Category</string>
    <string name="please_select_a_category">Please select a category</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product description</string>
    <string name="product_rating">Product rating</string>
    <string name="product_manufacturer">Product manufacturer</string>
    <string name="value">Value</string>
    <string name="rating">Rating</string>
    <string name="rate2">Rate :</string>
    <string name="send_link_to_my_email">send link to my email</string>
    <string name="user_email">User Email</string>
    <string name="story_title">Story Title</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="write_your_feedback_message_here">Write your feedback message here</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="delete_button">Delete Button</string>
    <string name="story_description">Story Description</string>
    <string name="author_name">Author Name</string>
    <string name="title_of_story">Title of story</string>
    <string name="upload_story">Upload story</string>
    <string name="back">Back</string>
    <string name="category_name">Category name</string>
    <string name="product_category_image">Product category image</string>
    <string name="reviews">Reviews</string>
    <string name="hello">HELLO</string>
    <string name="splash_screen">splash screen</string>
    <string name="add_products">Add Products</string>
    <string name="bathing_and_skin_care">Bathing And Skin Care</string>
    <string name="select_a_category">For more information please select one of each category.</string>
    <string name="baby_diapers">Baby Diapers</string>
    <string name="baby_food">Baby Food</string>
    <string name="baby_health">Baby Health</string>
    <string name="baby_s_safety">Baby\'s Safety</string>
    <string name="toys">Toys</string>
    <string name="rate_products">Rate Products</string>
    <string name="more_details_and_comments_on_product">MORE DETAILS and Comments</string>
    <string name="title_activity_find_clinics_map">Map</string>
    <string name="find_clinics_around">Find Clinics Around</string>

    <string-array name="gender_names">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="news_feed_query_options">
        <item>Edit Query</item>
        <item>Delete Query</item>
    </string-array>


</resources>
