<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.MwandoJrTechnologies.the_smart_parent.GrowthAnalysis.GrowthAnalysisActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:padding="10dp">

        <TextView
            android:id="@+id/disclaimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/this_module_is_still_under_development"
            android:textAlignment="center"
            android:textColor="#DB1709"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/g_analysis_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/disclaimer"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:elevation="@dimen/default_gap"
            android:focusable="true"
            android:src="@drawable/outline_date_range_white_24"
            android:text="@string/date_of_birth" />


        <TextView
            android:id="@+id/g_analysis_birth_date1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/disclaimer"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/date_of_birth_2"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/g_analysis_birth_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/disclaimer"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/g_analysis_birth_date1"
            android:drawableEnd="@drawable/baseline_arrow_forward_black_24"
            android:drawablePadding="2dp"
            android:text="@string/please_select"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/g_analysis_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/g_analysis_birth_date"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/age2"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/g_analysis_age_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/g_analysis_birth_date"
            android:layout_alignParentStart="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/g_analysis_age"
            android:text="@string/age"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>
